--- a/backend/package.json
+++ b/backend/package.json
@@ -10,5 +10,11 @@
   },
   "keywords": [],
   "author": "Victor Mendez",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
+  }
 }
